Tue Jun 14 22:11:11 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ocsp.c (ossl_ocspcid_get_issuer_name_hash,
	  ossl_ocspcid_get_issuer_key_hash, ossl_ocspcid_get_hash_algorithm):
	  Add accessor methods OCSP::CertificateId#issuer_name_hash,
	  #issuer_key_hash, #hash_algorithm.
	  Based on a patch provided by Paul Kehrer <paul.l.kehrer@gmail.com>.
	  [ruby-core:48062] [Feature #7181]

	* test/openssl/test_ocsp.rb: Test these new methods.

Tue Jun 14 22:07:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_strftime.c (date_strftime_with_tmx): reject too
	  large precision to get rid of buffer overflow.
	  reported by Guido Vranken <guido AT guidovranken.nl>.

Tue Jun 14 21:40:42 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ocsp.c (ossl_ocspbres_to_der, ossl_ocspcid_to_der):
	  Implement #to_der methods for OCSP::BasicResponse and
	  OCSP::CertificateId.

	  (ossl_ocspreq_initialize, ossl_ocspres_initialize): Use GetOCSP*()
	  instead of raw DATA_PTR().

	  (ossl_ocspbres_initialize, ossl_ocspcid_initialize): Allow
	  initializing from DER string.

	  (Init_ossl_ocsp): Define new #to_der methods.

	* test/openssl/test_ocsp.rb: Test these changes. Also add missing tests
	  for OCSP::{Response,Request}#to_der.

Tue Jun 14 21:35:00 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/openssl_missing.h (DH_set0_pqg, RSA_set0_key):
	  DH_set0_pqg() allows 'q' to be NULL. Fix a typo in RSA_set0_key().
	  Fixes r55285.  [ruby-core:75225] [Feature #12324]

Mon Jun 14 10:19:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: describe Integer#digits.

Mon Jun 13 21:09:40 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread.c (debug_deadlock_check): show thread lock dependency and
	  backtrace [Feature #8214] [ruby-dev:47217]

	* thread.c (thread_status_name): show "sleep_forever" instead of
	  "sleep" if called from inspect.

Mon Jun 13 20:50:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
