@@ -1,3 +1,8 @@
+Tue Jun 14 22:22:07 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* strftime.c (rb_strftime_with_timespec): limit the result string
+	  size by the format length, to get rid of unlimited memory use.
+
 Tue Jun 14 22:11:11 2016  Kazuki Yamaguchi  <k@rhe.jp>
 
 	* ext/openssl/ossl_ocsp.c (ossl_ocspcid_get_issuer_name_hash,
